[project]
name = "hail-missing"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matthew Solomonson", email = "ggmatt@gmail.com" }
]
dependencies = [
    "hail>=0.2.128",
    "pandas>=2.2.1",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.2",
    "setuptools>=69.1.1",
    "ipython>=8.22.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hail_missing"]
